feat: add graduate dashboard and quality fixes